// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  id={1}
  info={undefined}
  name="colors"
  render={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;

exports[`with renderError and infoError renders error 1`] = `
<div>
  Error: 
  foo
</div>
`;

exports[`with renderError and without infoError renders edit 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  id={1}
  info={undefined}
  name="colors"
  render={[Function]}
  renderError={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;

exports[`with renderLoading and fetchingInfo renders loading correctly 1`] = `
<div>
  Loading
</div>
`;

exports[`with renderLoading and info renders edit correctly 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  id={1}
  info={
    Object {
      "foo": "bar",
    }
  }
  name="colors"
  render={[Function]}
  renderLoading={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;

exports[`with renderLoading, fetchingInfo and info renders loading 1`] = `
<div>
  Loading
</div>
`;

exports[`with renderUpdated and not updated renders edit 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  id={1}
  info={undefined}
  name="colors"
  render={[Function]}
  renderUpdated={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;

exports[`with renderUpdated and updated renders updated 1`] = `
<div
  foo="bar"
>
  Updated
</div>
`;

exports[`without renderLoading and with fetchingInfo renders edit correctly 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  fetchingInfo={true}
  id={1}
  info={undefined}
  name="colors"
  render={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;
